# qti_package_maker

./: .gitignore  AGENTS.md  CODE_DESIGN.md  MANIFEST.in  MODULARITY_REPORT.txt  README.md  TEMP_RDKit_QTI_IMPORT_NOTES.md  TODO.txt  VERSION  old_README.md  pip_requirements.txt  pyproject.toml  requirements.txt  source_me_for_testing.sh
devel/: bump_version.py  submit_to_pypi.py
docs/: CHANGELOG.md  CODE_ARCHITECTURE.md  CODE_DESIGN.md  COLOR_WHEEL_REFACTOR_PLAN.md  COMMUNITY.md  DEVELOPMENT.md  ENGINES.md  ENGINE_AUTHORING.md  FILE_STRUCTURE.md  FORMATS.md  INSTALL.md  MARKDOWN_STYLE.md  QUESTION_TYPES.md  RELATED_PROJECTS.md  ROADMAP.md  TEST_PLAN.md  TODO.md  TROUBLESHOOTING.md  USAGE.md
notes/: archive_v1.tgz  engine_idea.txt
qti_package_maker/: __init__.py  add_item.py  engine_idea.txt  item_helpers.py  items.py  manifest.py  package_interface.py  package_maker.py  question_bank.py  string_functions.py  test_canvas.py  test_human.py  test_item.py  test_make.py  test_maker.py  test_qti_v1.py  xml_helpers.py
qti_package_maker/12min/: imsmanifest.xml
qti_package_maker/12min/qti12_questions/: assessment_meta.xml  qti12_questions.xml
qti_package_maker/21min/: imsmanifest.xml
qti_package_maker/21min/qti21/: assessmentItem00001.xml  assessment_meta.xml  item_00002.xml
qti_package_maker/archive_v1/: add_item_v1.py  add_item_v2.py  item_helpers_v2.py  package_maker.py
qti_package_maker/assessment_items/: base_item.py  item_bank.py  item_types.py  validator.py
qti_package_maker/common/: anti_cheat.py  base_package_maker.py  color_wheel.py  franken_bptools.py  qti_manifest.py  string_functions.py  tabulate_compat.py  validator.py  yaml_tools.py
qti_package_maker/common/color_theory/: __init__.py  cam16_utils.py  color_utils.py  generator.py  html_tables.py  hue_layout.py  legacy_color_wheel.py  main.py  next_gen.py  red_scan.py  rgb_color_name_match.py  wheel_specs.py  wheel_specs.yaml
qti_package_maker/common/color_wheel/: __init__.py  legacy_color_wheel.py  next_gen.py
qti_package_maker/data/: all_short_words.txt
qti_package_maker/engine_blackboard_qti_v2_1/: add_item.py  assessment_meta.py  engine_class.py
qti_package_maker/engine_blackboard_text_upload/: engine_class.py
qti_package_maker/engine_canvas_qti_v1_2/: add_item.py  engine_class.py  item_xml_helpers.py  sample_matching.xml
qti_package_maker/engine_human_readable/: add_item.py  engine_class.py
qti_package_maker/engine_qti_v1_2/: add_item.py  assessment_meta.py  engine_class.py  item_xml_helpers.py  manifest.py
qti_package_maker/engine_qti_v2_1/: add_item.py  engine_class.py  manifest.py
qti_package_maker/engines/: ENGINE_CLEANUP.txt  base_engine.py  engine_registration.py
qti_package_maker/engines/bbq_text_upload/: add_item.py  engine_class.py  read_package.py  write_item.py
qti_package_maker/engines/blackboard_qti_v2_1/: add_item.py  assessment_meta.py  engine_class.py  item_xml_helpers.py  write_item.py
qti_package_maker/engines/blackboard_text_upload/: add_item.py  engine_class.py
tests/: conftest.py  get_repo_root.py  run_pyflakes.sh  test_all_engines.py  test_ascii_compliance.py  test_bandit_security.py  test_bbq_converter_all_types.py  test_canvas.py  test_human.py  test_human_readable_tables.py  test_import_star.py  test_indentation.py  test_pyflakes_code_lint.py  test_shebangs.py  test_simple.py  test_strip_prefix.py  test_whitespace.py
tests/integration/: test_bbq_converter_cli.py  test_engine_outputs.py  test_package_interface.py  test_reader_roundtrip.py  test_zip_safety.py
tests/unit/: test_anti_cheat.py  test_base_engine.py  test_bbq_converter.py  test_bbq_read_package.py  test_bbq_read_package_edge_cases.py  test_bbq_read_package_errors.py  test_bbq_write_item.py  test_color_wheel.py  test_color_wheel_extra.py  test_color_wheel_next_gen.py  test_docs_consistency.py  test_engine_contract.py  test_engine_registration.py  test_html_selftest_output.py  test_item_bank.py  test_item_repr.py  test_item_types.py  test_manifest_schema.py  test_multi_engine_roundtrip.py  test_num_writer_tolerance_zero.py  test_okla_read_package.py  test_okla_read_package_ignores_unknown.py  test_qti_manifest.py  test_qti_writer_outputs.py  test_reader_error_paths.py  test_rgb_color_name_match.py  test_roundtrip_bbq_text_upload.py  test_roundtrip_okla_chrst_bqgen.py  test_roundtrip_text2qti.py  test_string_functions.py  test_tabulate_compat.py  test_text2qti_read_package.py  test_text2qti_read_package_errors.py  test_text2qti_write_item.py  test_tools_xml_formatter.py  test_unit_package_interface.py  test_validator.py  test_yaml_tools.py
tools/: bbq_converter.py  merge_all_python_scripts.sh  test_canvas.py  test_human.py  xml_formatter.py
unit_tests/: test_all_engines.py  test_simple.py
(+34 files in other folders)
