[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qti_package_maker"
version = "0.9.0.2"
description = "A package to create and manage QTI packages for quizzes and assessments"
readme = "README.md"
authors = [{ name = "Dr. Neil Voss"}]
# License issue references (kept for notes but not included in metadata)
# None of these work:
# https://github.com/pypa/twine/issues/1216
# license = { text = "GPL-3.0-or-later" }
# license = "GPL-3.0-or-later"
# license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "crcmod",
    "lxml",
    "num2words"
]

[tool.setuptools]
license-files = []

# This will include all sub-packages
[tool.setuptools.packages.find]
include = ["qti_package_maker*"]

[project.urls]
Homepage = "https://biologyproblems.org"
Repository = "https://github.com/vosslab/qti_package_maker"
