[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qti_package_maker"
version = "0.7.2"
description = "A package to create, manage, and convert QTI packages for quizzes and assessments in Canvas, Blackboard, Moodle, and LibreTexts ADAPT."
readme = "README.md"
authors = [{ name = "Dr. Neil Voss"}]
# License issue references (kept for notes but not included in metadata)
# None of these work:
# https://github.com/pypa/twine/issues/1216
# license = { text = "GPL-3.0-or-later" }
# license = "GPL-3.0-or-later"
# license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = [
    "QTI", "quiz", "assessment", "test package",
    "Canvas", "Blackboard", "Moodle", "LibreTexts ADAPT",
    "e-learning", "LMS", "question bank", "quiz converter",
    "online learning", "exam generator", "QTI exporter",
    "IMS Question and Test Interoperability specification",
    "Question and Test Interoperability", "XML",
    "QTI v2.1", "QTI v1.2"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Topic :: Education :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
dependencies = [
    "crcmod",
    "lxml",
    "num2words"
]

[tool.setuptools]
license-files = []

# This will include all sub-packages
[tool.setuptools.packages.find]
include = ["qti_package_maker*"]

[project.urls]
Homepage = "https://biologyproblems.org"
Repository = "https://github.com/vosslab/qti_package_maker"
PyPI = "https://pypi.org/project/qti-package-maker/"
